# OGE

./: .gitignore  CMakeLists.txt  README.md  README_cn.md  pyproject.toml  requirements.txt  vcpkg.json
.github/workflows/: build-and-publish.yml
cmake/: ParseVersion.cmake  oge-config.cmake.in
configs/: env_cfg.py  ppo_cfg.py
modules/: env_wrapper.py  networks.py
runs/ppo_oge/26-03-27_09-55-05-527862_PPO/: events.out.tfevents.1774576508.baoyicui-MS-7E49.120596.0
runs/ppo_oge/26-03-27_10-00-16-787630_PPO/: events.out.tfevents.1774576819.baoyicui-MS-7E49.126698.0
runs/ppo_oge/26-03-27_10-05-33-701201_PPO/: events.out.tfevents.1774577136.baoyicui-MS-7E49.133037.0
runs/ppo_oge/26-03-27_10-07-29-033740_PPO/: events.out.tfevents.1774577251.baoyicui-MS-7E49.135397.0
runs/ppo_oge/26-03-27_10-08-33-172157_PPO/: events.out.tfevents.1774577315.baoyicui-MS-7E49.136863.0
runs/ppo_oge/26-03-27_10-10-30-952293_PPO/: events.out.tfevents.1774577433.baoyicui-MS-7E49.140008.0
runs/ppo_oge/26-03-27_10-11-18-702339_PPO/: events.out.tfevents.1774577481.baoyicui-MS-7E49.141468.0
runs/ppo_oge/26-03-27_10-14-36-468795_PPO/: events.out.tfevents.1774577679.baoyicui-MS-7E49.145480.0
runs/ppo_oge/26-03-27_10-16-13-901763_PPO/: events.out.tfevents.1774577776.baoyicui-MS-7E49.148875.0
runs/ppo_oge/26-03-27_10-16-47-943588_PPO/: events.out.tfevents.1774577810.baoyicui-MS-7E49.149816.0
runs/ppo_oge/26-03-27_10-18-27-869785_PPO/: events.out.tfevents.1774577910.baoyicui-MS-7E49.151762.0
runs/ppo_oge/26-03-27_10-19-51-896801_PPO/: events.out.tfevents.1774577995.baoyicui-MS-7E49.153643.0
runs/ppo_oge/26-03-27_10-21-39-173833_PPO/: events.out.tfevents.1774578102.baoyicui-MS-7E49.155763.0
runs/ppo_oge/26-03-27_10-23-05-695710_PPO/: events.out.tfevents.1774578190.baoyicui-MS-7E49.157895.0
runs/ppo_oge/26-03-27_10-24-10-835361_PPO/: events.out.tfevents.1774578253.baoyicui-MS-7E49.159550.0
runs/ppo_oge/26-03-27_10-24-10-835361_PPO/checkpoints/: agent_100000.pt  agent_150000.pt  agent_200000.pt  agent_250000.pt  agent_50000.pt  best_agent.pt
scripts/: train.py
scripts/demos/: coe_rv.py  propagator.py  viewer.py
scripts/demos/pe_env/: eval.py
src/oge/: CMakeLists.txt  oge_interface.cpp  oge_interface.h  version.h.in
src/oge/common/: CMakeLists.txt  constants.cpp  constants.h  log.cpp  log.h
src/oge/environment/: CMakeLists.txt  oge_settings.cpp  oge_settings.h  oge_state.cpp  oge_state.h  orbital_game_environment.cpp  orbital_game_environment.h
src/oge/python/: CMakeLists.txt  __init__.py  __init__.pyi  env.py  oge_python_interface.cpp  oge_python_interface.h  oge_vector_python_interface.cpp  oge_vector_python_interface.h  registration.py  vector_env.py
src/oge/simcore/: CMakeLists.txt  math.cpp  math.h  propagator.cpp  propagator.h  utils.cpp  utils.h
src/oge/vector/: CMakeLists.txt  async_vectorizer.h  preprocessed_env.h  utils.h
tests/python/: conftest.py  test_is_captured.py  test_oge_env.py  test_orbital_game_env.py  test_python_interface.py  test_vector_env.py  utils.py
wandb/: latest-run
wandb/run-20260327_095507-qd6u1mu3/: run-qd6u1mu3.wandb
wandb/run-20260327_095507-qd6u1mu3/files/: config.yaml  wandb-metadata.json
wandb/run-20260327_095507-qd6u1mu3/files/runs/ppo_oge/26-03-27_09-55-05-527862_PPO/: events.out.tfevents.1774576508.baoyicui-MS-7E49.120596.0
wandb/run-20260327_100018-1ui0y1v7/: run-1ui0y1v7.wandb
wandb/run-20260327_100018-1ui0y1v7/files/: config.yaml  wandb-metadata.json
wandb/run-20260327_100018-1ui0y1v7/files/runs/ppo_oge/26-03-27_10-00-16-787630_PPO/: events.out.tfevents.1774576819.baoyicui-MS-7E49.126698.0
wandb/run-20260327_100535-lkcx8p9v/: run-lkcx8p9v.wandb
wandb/run-20260327_100535-lkcx8p9v/files/: config.yaml  wandb-metadata.json
wandb/run-20260327_100535-lkcx8p9v/files/runs/ppo_oge/26-03-27_10-05-33-701201_PPO/: events.out.tfevents.1774577136.baoyicui-MS-7E49.133037.0
wandb/run-20260327_100730-j1po4jtz/: run-j1po4jtz.wandb
wandb/run-20260327_100730-j1po4jtz/files/: config.yaml  wandb-metadata.json
wandb/run-20260327_100730-j1po4jtz/files/runs/ppo_oge/26-03-27_10-07-29-033740_PPO/: events.out.tfevents.1774577251.baoyicui-MS-7E49.135397.0
wandb/run-20260327_100834-3q5k9uz9/files/: wandb-metadata.json
wandb/run-20260327_101032-ax8q7wm5/: run-ax8q7wm5.wandb
wandb/run-20260327_101032-ax8q7wm5/files/: config.yaml  wandb-metadata.json
wandb/run-20260327_101032-ax8q7wm5/files/runs/ppo_oge/26-03-27_10-10-30-952293_PPO/: events.out.tfevents.1774577433.baoyicui-MS-7E49.140008.0
wandb/run-20260327_101120-c8a07fhc/: run-c8a07fhc.wandb
wandb/run-20260327_101120-c8a07fhc/files/: config.yaml  requirements.txt  wandb-metadata.json
wandb/run-20260327_101120-c8a07fhc/files/runs/ppo_oge/26-03-27_10-11-18-702339_PPO/: events.out.tfevents.1774577481.baoyicui-MS-7E49.141468.0
wandb/run-20260327_101438-qmqd5z3x/: run-qmqd5z3x.wandb
wandb/run-20260327_101438-qmqd5z3x/files/: config.yaml  wandb-metadata.json
wandb/run-20260327_101438-qmqd5z3x/files/runs/ppo_oge/26-03-27_10-14-36-468795_PPO/: events.out.tfevents.1774577679.baoyicui-MS-7E49.145480.0
wandb/run-20260327_101615-su9d5n83/: run-su9d5n83.wandb
wandb/run-20260327_101615-su9d5n83/files/: config.yaml  wandb-metadata.json
wandb/run-20260327_101615-su9d5n83/files/runs/ppo_oge/26-03-27_10-16-13-901763_PPO/: events.out.tfevents.1774577776.baoyicui-MS-7E49.148875.0
wandb/run-20260327_101649-g0y69njf/: run-g0y69njf.wandb
wandb/run-20260327_101649-g0y69njf/files/: config.yaml  wandb-metadata.json
wandb/run-20260327_101829-optwoclz/: run-optwoclz.wandb
wandb/run-20260327_101829-optwoclz/files/: config.yaml  wandb-metadata.json
wandb/run-20260327_101953-hztahx3k/files/: config.yaml  wandb-metadata.json
wandb/run-20260327_102140-ydp49ka1/files/: wandb-metadata.json
wandb/run-20260327_102309-8tmulteu/: run-8tmulteu.wandb
wandb/run-20260327_102309-8tmulteu/files/: wandb-metadata.json
wandb/run-20260327_102412-okydm3bk/: run-okydm3bk.wandb
wandb/run-20260327_102412-okydm3bk/files/: config.yaml  wandb-metadata.json  wandb-summary.json
(+4 files in other folders)
